# openai-functionregistry

./: .gitignore  README.md  __init__.py  example.env  pyproject.toml  tool_registry.py
openai_functionregistry/: __init__.py  chat_client.py  client.py  generate_pydantic_model.py  tool_registry.py  tool_registry_usage_example.py  utils.py
